--- a/fixes.yaml
+++ b/fixes.yaml
@@ -3,38 +3,43 @@ info:
   title: Overlay bluesky_orig.yaml => bluesky.yaml
   version: 0.0.0
 actions:
-  - target: $["servers"]
+  - target: $.servers
     update:
       - url: https://api.bsky.app
         description: Bluesky API
-  - target: $["paths"]["/xrpc/com.atproto.server.confirmEmail"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"][*]
+
+  - target: >-
+      $.paths.*.*[?(
+        @.operationId == "com.atproto.server.confirmEmail" ||
+        @.operationId == "com.atproto.server.deleteAccount" ||
+        @.operationId == "com.atproto.server.resetPassword" ||
+        @.operationId == "com.atproto.server.updateEmail"
+      )].responses["400"].content["application/json"].schema.properties.error.enum[?(@ == "InvalidToken")]
     remove: true
-  - target: $["paths"]["/xrpc/com.atproto.server.confirmEmail"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"]
+  - target: >-
+      $.paths.*.*[?(
+        @.operationId == "com.atproto.server.confirmEmail" ||
+        @.operationId == "com.atproto.server.deleteAccount" ||
+        @.operationId == "com.atproto.server.resetPassword" ||
+        @.operationId == "com.atproto.server.updateEmail"
+      )].responses["400"].content["application/json"].schema.properties.error.enum
     update:
-      - InvalidRequest
       - InvalidToken
-      - AccountNotFound
-      - ExpiredToken
-      - InvalidEmail
-  - target: $["paths"]["/xrpc/com.atproto.server.deleteAccount"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"][*]
+
+  - target: >-
+      $.paths.*.*[?(
+        @.operationId == "com.atproto.server.confirmEmail" ||
+        @.operationId == "com.atproto.server.deleteAccount" ||
+        @.operationId == "com.atproto.server.resetPassword" ||
+        @.operationId == "com.atproto.server.updateEmail"
+      )].responses["400"].content["application/json"].schema.properties.error.enum[?(@ == "ExpiredToken")]
     remove: true
-  - target: $["paths"]["/xrpc/com.atproto.server.deleteAccount"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"]
+  - target: >-
+      $.paths.*.*[?(
+        @.operationId == "com.atproto.server.confirmEmail" ||
+        @.operationId == "com.atproto.server.deleteAccount" ||
+        @.operationId == "com.atproto.server.resetPassword" ||
+        @.operationId == "com.atproto.server.updateEmail"
+      )].responses["400"].content["application/json"].schema.properties.error.enum
     update:
-      - InvalidRequest
       - ExpiredToken
-      - InvalidToken
-  - target: $["paths"]["/xrpc/com.atproto.server.resetPassword"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"][*]
-    remove: true
-  - target: $["paths"]["/xrpc/com.atproto.server.resetPassword"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"]
-    update:
-      - InvalidRequest
-      - ExpiredToken
-      - InvalidToken
-  - target: $["paths"]["/xrpc/com.atproto.server.updateEmail"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"][*]
-    remove: true
-  - target: $["paths"]["/xrpc/com.atproto.server.updateEmail"]["post"]["responses"]["400"]["content"]["application/json"]["schema"]["properties"]["error"]["enum"]
-    update:
-      - InvalidRequest
-      - ExpiredToken
-      - InvalidToken
-      - TokenRequired
