--- a/.speakeasy/gen.yaml
+++ b/.speakeasy/gen.yaml
@@ -43,7 +43,7 @@ typescript:
   methodArguments: infer-optional-args
   moduleFormat: esm
   outputModelSuffix: output
-  packageName: @speakeasy-api/bluesky
+  packageName: "@speakeasy-api/bluesky"
   responseFormat: flat
   templateVersion: v2
   useIndexModules: true
