--- a/.github/workflows/sdk_generation.yaml
+++ b/.github/workflows/sdk_generation.yaml
@@ -22,7 +22,7 @@ permissions:
         - cron: 0 0 * * *
 jobs:
     generate:
-        uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15
+        uses: speakeasy-api/sdk-generation-action/.github/workflows/workflow-executor.yaml@v15.52.0-pre.0
         with:
             force: ${{ github.event.inputs.force }}
             mode: pr
